Added new constructor to Stat class. Implemented isEquivalentClass method in PelletReasoner. Started new class StatsGenerator to generate statistics from evaluation protocol files. Some small fixes.